# computer-vision-app

./: .sesskey  app.py  pyproject.toml
core/: models.py  processor.py  webcam_recog.py
