[project]
name = "computer-vision-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "mediapipe>=0.10.32",
    "opencv-python>=4.13.0.92",
    "python-fasthtml>=0.12.50",
    "scikit-learn>=1.8.0",
]
